# workshop_llm_data_collection

./: .gitignore  README.md  _config.yml  llm_data_collection_R.ipynb  llm_regression_modelling_py.ipynb  main.py  pyproject.toml
data/: srl_data_example.csv
img/: llm_data_collection.drawio
notebooks/: llm_data_annotation_py.ipynb  llm_data_collection_R.ipynb  llm_data_collection_R.qmd  llm_data_collection_py.ipynb  llm_inferential_regression_R.ipynb  llm_inferential_regression_py.ipynb  llm_regression_modelling_py.ipynb
